deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task05-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task05-app
  template:
    metadata:
      labels:
        app: task05-app
    spec:
      containers:
        - name: task05
          image: ibesedin/task05:1.0
          ports:
            - name: web
              containerPort: 8000
