ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task05-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: task05-service
                port: 
                  number: 8000
